# brickplan

./: .gitignore  README.md  justfile
.github/workflows/: ci.yml
planner/: Cargo.toml
planner/src/: layout.rs  lib.rs  plan.rs  sequence.rs  spec.rs
planner/src/tests/: layout.rs  mod.rs  sequence.rs  snapshot.rs  validation.rs
planner/src/tests/fixtures/: small_plan.json
web/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
web/src/: App.tsx  geometry.ts  index.css  planner.ts  types.ts
web/src/components/: InfoDialog.tsx  PlanPanel.tsx  PlaybackBar.tsx  SpecControls.tsx  WallCanvas.tsx  WallScene.tsx
