[package]
name = "planner"
version = "0.1.0"
edition = "2024"
description = "Wall layout planner: turns a wall spec into a serialized placement plan"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
thiserror = "2"
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
serde_json = "1"
